kubernetes/deployment-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-voto-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-voto
  template:
    metadata:
      labels:
        app: web-voto
    spec:
      containers:
        - name: web-voto
          image: registry.gitlab.com/sakundi/zk-voto-digital:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
