kubernetes/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: web-voto-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: web-voto
